fix(h2): line spacing

--- a/cmd/static/styles.css
+++ b/cmd/static/styles.css
@@ -306,7 +306,7 @@ h2 {
   transform: translate(-50%, -50%);
   font-size: 85px;
 
-  line-height: 45px;
+  line-height: 85px;
 
   /*
   position: absolute;
